--- a/index.html
+++ b/index.html
@@ -18,209 +18,240 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <!-- Шапка сайту -->
-
-      <nav class="top-nav top-link">
-        <a class="logo" href="./index.html">
-          Web<span class="endlogo">Studio</span>
-        </a>
-        <ul class="list list-nav">
-          <li><a class="link" href="./index.html"> Studio </a></li>
-          <li><a class="link" href=""> Portfolio </a></li>
-          <li><a class="link" href=""> Contacts </a></li>
-        </ul>
-      </nav>
-      <address class="contact-nav top-link">
-        <ul class="link">
-          <li>
-            <a class="link contact-info" href="mailto:info@devstudio.com">
-              info@devstudio.com
-            </a>
-          </li>
-          <li>
-            <a class="link contact-info" href="tel:+110001111111">
-              +11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container page-header-container">
+        <nav class="top-nav">
+          <a class="logo" href="./index.html">
+            Web<span class="endlogo">Studio</span>
+          </a>
+          <ul class="list list-nav">
+            <li><a class="link" href="./index.html"> Studio </a></li>
+            <li><a class="link" href=""> Portfolio </a></li>
+            <li><a class="link" href=""> Contacts </a></li>
+          </ul>
+        </nav>
+        <address class="contact-nav top-link">
+          <ul class="link link-address">
+            <li>
+              <a class="link contact-info" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a class="link contact-info" href="tel:+110001111111">
+                +11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Section 1 -->
 
       <section class="hero-section">
-        <!-- hero -->
+        <div class="container">
+          <!-- hero -->
 
-        <h1 class="hero-text">Effective Solutions for Your Business</h1>
-        <button class="button">Order Service</button>
+          <h1 class="hero-text">Effective Solutions for Your Business</h1>
+          <button class="button">Order Service</button>
+        </div>
       </section>
 
       <!-- Section 2 -->
 
       <section class="information">
-        <h2 hidden>Information</h2>
-        <ul class="list">
-          <li>
-            <h3 class="title-name">Strategy</h3>
-            <p class="title-info">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-name">Punctuality</h3>
-            <p class="title-info">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-name">Diligence</h3>
-            <p class="title-info">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-name">Technologies</h3>
-            <p class="title-info">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Information</h2>
+          <ul class="list information-list">
+            <li class="link-information-list">
+              <h3 class="title-name">Strategy</h3>
+              <p class="title-info">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="link-information-list">
+              <h3 class="title-name">Punctuality</h3>
+              <p class="title-info">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="link-information-list">
+              <h3 class="title-name">Diligence</h3>
+              <p class="title-info">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="link-information-list">
+              <h3 class="title-name">Technologies</h3>
+              <p class="title-info">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section 3 OUR TEAM -->
 
       <section class="our-team">
-        <h2 class="name-section-team">Our Team</h2>
-        <ul class="list">
-          <li class="photo-team">
-            <img
-              src="./images/img-0.jpg"
-              alt="Mark Guerrero Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="name-employee">Mark Guerrero</h3>
-            <p class="info-employee">Product Designer</p>
-          </li>
-          <li class="photo-team">
-            <img
-              src="./images/img-1.jpg"
-              alt="Tom Ford Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="name-employee">Tom Ford</h3>
-            <p class="info-employee">Frontend Developer</p>
-          </li>
-          <li class="photo-team">
-            <img
-              src="./images/img-2.jpg"
-              alt="Camila Garcia Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="name-employee">Camila Garcia</h3>
-            <p class="info-employee">Marketing</p>
-          </li>
-          <li class="photo-team">
-            <img
-              src="./images/img-3.jpg"
-              alt="Daniel Wilson UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="name-employee">Daniel Wilson</h3>
-            <p class="info-employee">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="name-section-team">Our Team</h2>
+          <ul class="list list-photo-team">
+            <li class="photo-team">
+              <img
+                src="./images/img-0.jpg"
+                alt="Mark Guerrero Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="card-employee">
+                <h3 class="name-employee">Mark Guerrero</h3>
+                <p class="info-employee">Product Designer</p>
+              </div>
+            </li>
+            <li class="photo-team">
+              <img
+                src="./images/img-1.jpg"
+                alt="Tom Ford Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="card-employee">
+                <h3 class="name-employee">Tom Ford</h3>
+                <p class="info-employee">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="photo-team">
+              <img
+                src="./images/img-2.jpg"
+                alt="Camila Garcia Marketing"
+                width="264"
+                height="260"
+              />
+              <div class="card-employee">
+                <h3 class="name-employee">Camila Garcia</h3>
+                <p class="info-employee">Marketing</p>
+              </div>
+            </li>
+            <li class="photo-team">
+              <img
+                src="./images/img-3.jpg"
+                alt="Daniel Wilson UI Designer"
+                width="264"
+                height="260"
+              />
+              <div class="card-employee">
+                <h3 class="name-employee">Daniel Wilson</h3>
+                <p class="info-employee">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section 4 -->
 
       <section class="portfolio-list">
-        <h2 class="name-section">Our Portfolio</h2>
+        <div class="container">
+          <h2 class="name-section">Our Portfolio</h2>
 
-        <ul class="list">
-          <li class="photo-portfolio">
-            <img
-              src="./images/our-portfolio/banking-app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="name-portfolio-photo">Banking App</h3>
-            <p class="text-portfolio">App</p>
-          </li>
-          <li class="photo-portfolio">
-            <img
-              src="./images/our-portfolio/cashless-payment.jpg"
-              alt="Cashless
+          <ul class="list list-photo-portfolio">
+            <li class="photo-portfolio">
+              <img
+                src="./images/our-portfolio/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="info-port">
+                <h3 class="name-portfolio-photo">Banking App</h3>
+                <p class="text-portfolio">App</p>
+              </div>
+            </li>
+            <li class="photo-portfolio">
+              <img
+                src="./images/our-portfolio/cashless-payment.jpg"
+                alt="Cashless
             Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="name-portfolio-photo">Cashless Payment</h3>
-            <p class="text-portfolio">Marketing</p>
-          </li>
-          <li class="photo-portfolio">
-            <img
-              src="./images/our-portfolio/meditation-app.jpg"
-              alt="Meditation
+                width="360"
+                height="300"
+              />
+              <div class="info-port">
+                <h3 class="name-portfolio-photo">Cashless Payment</h3>
+                <p class="text-portfolio">Marketing</p>
+              </div>
+            </li>
+            <li class="photo-portfolio">
+              <img
+                src="./images/our-portfolio/meditation-app.jpg"
+                alt="Meditation
             App"
-              width="360"
-              height="300"
-            />
-            <h3 class="name-portfolio-photo">Meditation App</h3>
-            <p class="text-portfolio">App</p>
-          </li>
-          <li class="photo-portfolio">
-            <img
-              src="./images/our-portfolio/taxi-service.jpg"
-              alt="Taxi
+                width="360"
+                height="300"
+              />
+              <div class="info-port">
+                <h3 class="name-portfolio-photo">Meditation App</h3>
+                <p class="text-portfolio">App</p>
+              </div>
+            </li>
+            <li class="photo-portfolio">
+              <img
+                src="./images/our-portfolio/taxi-service.jpg"
+                alt="Taxi
             Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="name-portfolio-photo">Taxi Service</h3>
-            <p class="text-portfolio">Marketing</p>
-          </li>
-          <li class="photo-portfolio">
-            <img
-              src="./images/our-portfolio/screen-illustrations.jpg"
-              alt="ScreenIllustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="name-portfolio-photo">Screen Illustrations</h3>
-            <p class="text-portfolio">Design</p>
-          </li>
-          <li class="photo-portfolio">
-            <img
-              src="./images/our-portfolio/online-courses.jpg"
-              alt="Online
+                width="360"
+                height="300"
+              />
+              <div class="info-port">
+                <h3 class="name-portfolio-photo">Taxi Service</h3>
+                <p class="text-portfolio">Marketing</p>
+              </div>
+            </li>
+            <li class="photo-portfolio">
+              <img
+                src="./images/our-portfolio/screen-illustrations.jpg"
+                alt="ScreenIllustrations"
+                width="360"
+                height="300"
+              />
+              <div class="info-port">
+                <h3 class="name-portfolio-photo">Screen Illustrations</h3>
+                <p class="text-portfolio">Design</p>
+              </div>
+            </li>
+            <li class="photo-portfolio">
+              <img
+                src="./images/our-portfolio/online-courses.jpg"
+                alt="Online
             Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="name-portfolio-photo">Online Courses</h3>
-            <p class="text-portfolio">Marketing</p>
-          </li>
-        </ul>
+                width="360"
+                height="300"
+              />
+              <div class="info-port">
+                <h3 class="name-portfolio-photo">Online Courses</h3>
+                <p class="text-portfolio">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="end-page">
-      <a class="logo" href="./index.html"
-        >Web<span class="studio-footer">Studio</span></a
-      >
-      <p class="last-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="studio-footer">Studio</span></a
+        >
+        <p class="last-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
