update html css

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
             Web<span class="endlogo">Studio</span>
           </a>
           <ul class="list list-nav">
-            <li><a class="link" href="./index.html"> Studio </a></li>
-            <li><a class="link" href=""> Portfolio </a></li>
-            <li><a class="link" href=""> Contacts </a></li>
+            <li class="list-menu">
+              <a class="link link-menu" href="./index.html"> Studio </a>
+            </li>
+            <li class="list-menu">
+              <a class="link link-menu" href=""> Portfolio </a>
+            </li>
+            <li class="list-menu">
+              <a class="link link-menu" href=""> Contacts </a>
+            </li>
           </ul>
         </nav>
         <address class="contact-nav top-link">
