update css styles

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     </main>
     <footer class="end-page">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo footer-logo" href="./index.html"
           >Web<span class="studio-footer">Studio</span></a
         >
         <p class="last-text">
