update html css

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </nav>
         <address class="contact-nav top-link">
           <ul class="link link-address">
-            <li>
+            <li class="list-menu">
               <a class="link contact-info" href="mailto:info@devstudio.com">
                 info@devstudio.com
               </a>
             </li>
-            <li>
+            <li class="list-menu">
               <a class="link contact-info" href="tel:+110001111111">
                 +11 (000) 111-11-11
               </a>
